# Survival-Project

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/json/: items.json  monsters.json  recipes.json
data/mods/example_mod/: items_mod.json  modinfo.json
scripts/: format_json.py  validate_json.py
src/: main.cpp
